# fibonacci-algorithms-starter

./: .gitignore  README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
fibonaccicreator/: .ruff.toml  pyproject.toml
fibonaccicreator/fibonaccicreator/: fibonacci.py  main.py
fibonaccicreator/tests/: test_fibonacci.py
writing/: reflection.md
