[tool.poetry]
name = "fibonaccicreator"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.scripts]
fibonaccicreator = "fibonaccicreator.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.9.0"
pyinstrument = "^4.0.3"
sympy = "^1.8"
memory-profiler = "^0.58.0"
psutil = "^5.8.0"
typer = "^0.7.0"
ruff = "^0.2.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.8.1"
mypy = "^0.910"
pytest = "^7.1.1"
pymarkdownlnt = "^0.9.8"

[tool.taskipy.tasks]
coverage = { cmd = "poetry run pytest -s --cov-report term-missing --cov=fibonaccicreator", help = "Run coverage monitoring on test suite" }
ruff = { cmd = "ruff check --preview --output-format=concise", help = "Run the ruff checks for source code format and linting" }
ruffdetails = { cmd = "ruff check --preview", help = "Run the ruff checks for source code format and linting" }
fix = { cmd = "ruff check --fix", help = "Lint the fixable linting errors" }
format = { cmd = "ruff format fibonaccicreator/", help = "Format the code using ruff" }
markdownlint = { cmd = "poetry run pymarkdown --config .pymarkdown.cfg scan ../writing/reflection.md", help = "Run the markdown linter on writing" }
mypy = { cmd = "poetry run mypy fibonaccicreator", help = "Run the mypy type checker for potential type errors" }
all = "task ruff && task format && task markdownlint && task mypy && task test"
test = { cmd = "pytest -x -s", help = "Run the pytest test suite" }
test-silent = { cmd = "pytest -x --show-capture=no", help = "Run the pytest test suite without showing output" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
